--- a/app/src/main/res/layout/fragment_registrar_add_event.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_event.xml
@@ -54,7 +54,7 @@
             android:id="@+id/spnEventAudience"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:prompt="@string/select_audience" />
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -115,8 +115,11 @@
         android:textColor="#800000"
         android:textSize="22sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="107dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.104" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
