--- a/app/src/main/res/layout/fragment_teacher_view_grade.xml
+++ b/app/src/main/res/layout/fragment_teacher_view_grade.xml
@@ -153,6 +153,12 @@
                     android:textStyle="bold"
                     android:textColor="#FFFFFF"
                     android:gravity="center" />
+
+                <TextView
+                    android:text="Total"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center" />
             </TableRow>
 
 
