--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="dark_gray">#d9d9d9</color>
     <color name="dark_blue">#FF0000FF</color>
     <color name="light_blue">#FF2196F3</color>
+    <color name="lavender">#E6E6FA</color>
 </resources>
