--- a/app/src/main/res/layout/fragment_registrar_add_class.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_class.xml
@@ -21,10 +21,12 @@
         android:textColor="#800000"
         android:textSize="22sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="93dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.085" />
 
     <LinearLayout
         android:id="@+id/formLayout"
@@ -68,8 +70,7 @@
         <Spinner
             android:id="@+id/spnSubjects"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/select_subject" />
+            android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/edtNotes"
