--- a/app/src/main/res/layout/fragment_registrar_add_student.xml
+++ b/app/src/main/res/layout/fragment_registrar_add_student.xml
@@ -17,11 +17,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Student"
-            android:textSize="22sp"
-            android:textColor="#8B0000"
-            android:gravity="center"
             android:layout_marginTop="24dp"
+            android:fontFamily="@font/akaya_kanadaka"
+            android:gravity="center"
+            android:text="Add Student"
+            android:textColor="#8B0000"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <!-- Form Container -->
@@ -51,7 +52,7 @@
                 android:hint="Date Of Birth" />
 
             <EditText
-                android:id="@+id/edtEmail"
+                android:id="@+id/edtEmail1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
