--- a/app/src/main/res/layout/fragment_student_assignments.xml
+++ b/app/src/main/res/layout/fragment_student_assignments.xml
@@ -46,13 +46,14 @@
         app:layout_constraintTop_toBottomOf="@id/txtTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="16dp">
+        android:layout_marginHorizontal="16dp"
+        android:padding="5dp">
 
         <Button
             android:id="@+id/btnPending"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="@font/aldrich"
             android:text="Pending"
@@ -65,7 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="38dp"
             android:layout_marginStart="8dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="@font/aldrich"
             android:text="Submitted"
@@ -78,7 +79,7 @@
             android:layout_width="0dp"
             android:layout_height="38dp"
             android:layout_marginStart="8dp"
-            android:layout_weight="1"
+            android:layout_weight="1.3"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="@font/aldrich"
             android:text="Graded"
