--- a/app/src/main/res/layout/fragment_student_attendance.xml
+++ b/app/src/main/res/layout/fragment_student_attendance.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,29 +10,60 @@
     tools:context=".Student.StudentAttendanceFragment">
 
     <!-- Title -->
-
-    <!-- "My Attendance" label -->
-
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
         android:fontFamily="@font/inknut_antiqua_light"
         android:text="Student Attendance"
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="32dp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- "My Attendance" label -->
+
+    <!-- Select Date Button -->
+    <TextView
+        android:id="@+id/txtSubTitle1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/inknut_antiqua_light"
+        android:padding="10dp"
+        android:text="My Attendance"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtTitle" />
+
+    <Button
+        android:id="@+id/removeFromCartButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#990201"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center_vertical"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:text="Select Date"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        app:icon="@drawable/date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/txtSubTitle1" />
+
+    <!-- Attendance Card -->
     <LinearLayout
         android:id="@+id/llAttendanceCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@drawable/bg_student_marks_card"
         android:elevation="6dp"
         android:orientation="vertical"
@@ -39,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/removeFromCartButton">
 
         <TextView
@@ -57,15 +89,44 @@
             android:layout_height="wrap_content"
             android:text="Present"
             android:textColor="#B22222"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <!-- Divider -->
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/llAttendanceCard" />
+
+    <!-- "Add Attendance" label -->
+
+    <!-- QR Scan Button -->
+    <TextView
+        android:id="@+id/txtSubTitle2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/inknut_antiqua_light"
+        android:padding="10dp"
+        android:text="Add Attendance"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider" />
 
     <Button
         android:id="@+id/btnScanQR"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginTop="28dp"
         android:backgroundTint="#990201"
         android:fontFamily="@font/aldrich"
         android:gravity="center_vertical"
@@ -73,85 +134,10 @@
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:layout_marginTop="16dp"
         app:icon="@drawable/qr"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/txtSubTitle2" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="24dp"
-        android:background="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="24dp"
-        app:layout_constraintTop_toBottomOf="@id/llAttendanceCard" />
-
-    <TextView
-        android:id="@+id/txtSubTitle1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/inknut_antiqua_light"
-        android:padding="10dp"
-        android:text="My Attendance"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_margin="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="24dp"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle" />
-
-    <TextView
-        android:id="@+id/txtSubTitle2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/inknut_antiqua_light"
-        android:padding="10dp"
-        android:text="Add Attendance"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_margin="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/divider" />
-
-    <Button
-        android:id="@+id/removeFromCartButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="#990201"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center_vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:text="Select Date"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        app:icon="@drawable/date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/txtSubTitle1" />
-
-    <!-- Select Date Button -->
-
-    <!-- Attendance Card -->
-
-    <!-- Divider -->
-
-    <!-- "Add Attendance" label -->
-
-    <!-- QR Scan Button -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
