--- a/app/src/main/res/layout/activity_student_main.xml
+++ b/app/src/main/res/layout/activity_student_main.xml
@@ -1,84 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/teacherCoordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    tools:context="com.example.schoolhub.Student.StudentMainActivity">
+    android:fitsSystemWindows="true">
 
-    <LinearLayout
+    <!-- Drawer Layout -->
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/teacherDrawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:fitsSystemWindows="true">
 
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:id="@+id/toolbar"
-            android:elevation="4dp"
-            android:background="@color/dark_red"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
-        <FrameLayout
+        <!-- Main content with toolbar and fragment -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragment_container"/>
+            android:orientation="vertical"
+            android:fitsSystemWindows="true">
 
-    </LinearLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/teacherToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="#990100"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                android:elevation="4dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp">
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
-        app:itemIconTint="@color/dark_red"
-        app:itemTextColor="@color/dark_red"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp">
+
+                    <!-- Placeholder for hamburger icon -->
+                    <View
+                        android:layout_width="48dp"
+                        android:layout_height="match_parent" />
+
+                    <!-- App Name Text (centered with weight) -->
+
+                    <!-- Divider -->
+                    <TextView
+                        android:id="@+id/appTitle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:lineSpacingExtra="2dp"
+                        android:text="School\nHub"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textColor="@color/dark_gray"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="40dp"
+                        android:layout_marginHorizontal="8dp"
+                        android:background="@android:color/white" />
+
+                    <!-- Logo -->
+                    <ImageView
+                        android:id="@+id/appLogo"
+                        android:layout_width="55dp"
+                        android:layout_height="42dp"
+                        android:contentDescription="App Logo"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/logo2" />
+                </LinearLayout>
+            </androidx.appcompat.widget.Toolbar>
 
 
+            <!-- Fragment container -->
+            <FrameLayout
+                android:id="@+id/teacherFragmentContainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
 
+        <!-- Navigation Drawer -->
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/teacherNavView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/nav_drawer_student_menu" />
+    </androidx.drawerlayout.widget.DrawerLayout>
 
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-
+    <!-- Bottom Navigation -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/teacherBottomNav"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/bottom_student_menu"
+        app:itemIconTint="@color/dark_red"
+        app:itemTextColor="@color/dark_red"
 
-        <FrameLayout
-            android:id="@+id/frame_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/white"
-            app:fabCradleMargin="10dp"
-            app:fabCradleRoundedCornerRadius="50dp">
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:background="@android:color/transparent"
-                app:itemIconTint="@color/dark_red"
-                app:itemTextColor="@color/dark_red"
-                app:labelVisibilityMode="labeled"
-                android:fitsSystemWindows="true"
-                app:menu="@menu/bottom_student_menu" />
-        </com.google.android.material.bottomappbar.BottomAppBar>
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:background="?android:attr/windowBackground"
+        app:labelVisibilityMode="labeled"
+        android:fitsSystemWindows="true"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
