--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -106,5 +106,7 @@
         app:menu="@menu/bottom_teacher_menu"
         android:background="?android:attr/windowBackground"
         app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/dark_red"
+        app:itemTextColor="@color/dark_red"
         android:fitsSystemWindows="true"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
