--- a/app/src/main/res/layout/fragment_student_notification.xml
+++ b/app/src/main/res/layout/fragment_student_notification.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -18,8 +19,8 @@
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintTop_margin="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -87,7 +88,6 @@
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/radio_button_color"
                 android:text="Unread" />
-
         </LinearLayout>
     </LinearLayout>
 
