--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -94,7 +94,9 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header"
-            app:menu="@menu/nav_drawer_student_menu" />
+            app:menu="@menu/nav_drawer_student_menu"
+            app:itemIconTint="@color/dark_red"
+            app:itemTextColor="@color/dark_red"/>
     </androidx.drawerlayout.widget.DrawerLayout>
 
     <!-- Bottom Navigation -->
