--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -50,14 +50,14 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="APP\nNAME"
-                        android:textAlignment="textEnd"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold"
-                        android:textSize="18sp"
                         android:fontFamily="serif"
                         android:lineSpacingExtra="2dp"
-                        android:textAllCaps="true" />
+                        android:text="School\nHub"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textColor="@color/dark_gray"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <!-- Divider -->
                     <View
@@ -69,11 +69,11 @@
                     <!-- Logo -->
                     <ImageView
                         android:id="@+id/appLogo"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_launcher_background"
+                        android:layout_width="55dp"
+                        android:layout_height="42dp"
+                        android:contentDescription="App Logo"
                         android:scaleType="centerCrop"
-                        android:contentDescription="App Logo" />
+                        android:src="@drawable/logo2" />
                 </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
 
